<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:text="@string/timeline_target_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/target_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/timeline_target_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/target_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/timeline_actual_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/actual_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/timeline_actual_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/actual_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/timeline_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/timeline_extension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/extension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:id="@+id/remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
</ScrollView>