<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:text="@string/project_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/project_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/project_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/expected_outcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/expected_outcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/end_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/end_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

    </LinearLayout>
</ScrollView>