<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:text="@string/financial_budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/financial_contract_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/financial_actual_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/financial_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/financial_variation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/variation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

        <TextView
            android:text="@string/remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            />

    </LinearLayout>
</ScrollView>